--- a/README
+++ b/README
@@ -1,2 +1,2 @@
---This repo is only for test puposes and to keep the code for simple code 
+--This repo is only for test purposes and to keep the code for simple code 
 exercises.
